@@ -1,4 +1,5 @@
 1.8.1
+* WebUI: Added (switchable) sound notifications when a new block is mined
 * Client: Support for new config value "WebUI.ServerMode" - many users to share the same node
 * WebUI/Miners: Redone
 * WebUI: When a block with a wallet's unspent tx is purged from blockchain.dat, the raw tx gets fetched from the web
